custom without fees

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,13 +1,13 @@
 [programs.localnet]
-gem_bank = "bankHHdqMuaaST4qQk6mkzxGeKPHWmqdgor6Gs8r88m"
-gem_farm = "farmL4xeBFVXJqtfxCzU9b28QACM7E2W2ctT6epAjvE"
+gem_bank = "HH3mNHoxYP8riakmQMcYhGaY4ToXzyrt14Kiit4JK9S"
+gem_farm = "2yYDX8THp9hLM6YfTrhRUUSWtWJM9b87uEwCuFAXv26y"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
 cluster = "localnet"
-wallet = "/Users/ilmoi/.config/solana/id.json"
+wallet = "/home/arthur/sol/gem-farm/mywallet/keypair.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
